// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no custom outcomeProficiency 1`] = `
<span>
  <Popover
    alignArrow={false}
    constrain="window"
    contentRef={[Function]}
    defaultFocusElement={null}
    defaultShow={false}
    insertAt="bottom"
    label={null}
    liveRegion={null}
    mountNode={null}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "hover",
        "focus",
      ]
    }
    onBlur={[Function]}
    onClick={[Function]}
    onDismiss={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onPositionChanged={[Function]}
    onPositioned={[Function]}
    onShow={[Function]}
    onToggle={[Function]}
    placement="bottom"
    positionTarget={null}
    shouldCloseOnDocumentClick={true}
    shouldCloseOnEscape={true}
    shouldContainFocus={false}
    shouldRenderOffscreen={false}
    shouldReturnFocus={true}
    stacking="topmost"
    trackPosition={true}
    variant="default"
    withArrow={true}
  >
    <PopoverTrigger>
      <Link
        as="button"
        ellipsis={false}
        iconPlacement="start"
        linkRef={[Function]}
        onClick={[Function]}
        variant="default"
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <IconInfo />
        </span>
        <span>
          <ScreenReaderContent
            as="span"
          >
            Click to expand outcome details
          </ScreenReaderContent>
        </span>
      </Link>
    </PopoverTrigger>
    <PopoverContent>
      <View
        as="div"
        display="auto"
        maxWidth="30rem"
        padding="small"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="small"
        >
          <Flex
            alignItems="stretch"
            as="span"
            direction="row"
            inline={false}
            justifyItems="space-between"
            visualDebug={false}
            wrapItems={false}
          >
            <FlexItem
              as="span"
              grow={true}
              shrink={true}
            >
              <div>
                Last Assessment: 
                <DatetimeDisplay
                  datetime={2018-02-01T07:01:00.000Z}
                  format="%b %d, %l:%M %p"
                />
              </div>
            </FlexItem>
            <FlexItem
              align="stretch"
              as="span"
              grow={true}
              shrink={true}
            >
              <Text
                as="span"
                letterSpacing="normal"
                size="small"
                weight="bold"
              >
                <div>
                  <div
                    style={
                      Object {
                        "color": "#00AC18",
                        "textAlign": "end",
                      }
                    }
                  >
                    Meets Mastery
                  </div>
                </div>
              </Text>
            </FlexItem>
          </Flex>
          <hr
            role="presentation"
          />
          <div>
            <Text
              as="span"
              letterSpacing="normal"
              size="small"
              weight="bold"
            >
              Calculation Method
            </Text>
            <div>
              Highest Score
            </div>
            <div
              style={
                Object {
                  "padding": "0.5rem 0 0 0",
                }
              }
            >
              <Text
                as="span"
                letterSpacing="normal"
                size="small"
                weight="bold"
              >
                Example
              </Text>
            </div>
            <div>
              Mastery score reflects the highest score of a graded assignment or quiz.
            </div>
            <div>
              1- Item Scores: 1, 4, 2, 3
            </div>
            <div>
              2- Final Score: 4
            </div>
          </div>
        </Text>
      </View>
    </PopoverContent>
  </Popover>
  <FlexItem
    as="span"
    grow={false}
    shrink={false}
  />
</span>
`;

exports[`renders correctly with no results 1`] = `
<span>
  <Popover
    alignArrow={false}
    constrain="window"
    contentRef={[Function]}
    defaultFocusElement={null}
    defaultShow={false}
    insertAt="bottom"
    label={null}
    liveRegion={null}
    mountNode={null}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "hover",
        "focus",
      ]
    }
    onBlur={[Function]}
    onClick={[Function]}
    onDismiss={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onPositionChanged={[Function]}
    onPositioned={[Function]}
    onShow={[Function]}
    onToggle={[Function]}
    placement="bottom"
    positionTarget={null}
    shouldCloseOnDocumentClick={true}
    shouldCloseOnEscape={true}
    shouldContainFocus={false}
    shouldRenderOffscreen={false}
    shouldReturnFocus={true}
    stacking="topmost"
    trackPosition={true}
    variant="default"
    withArrow={true}
  >
    <PopoverTrigger>
      <Link
        as="button"
        ellipsis={false}
        iconPlacement="start"
        linkRef={[Function]}
        onClick={[Function]}
        variant="default"
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <IconInfo />
        </span>
        <span>
          <ScreenReaderContent
            as="span"
          >
            Click to expand outcome details
          </ScreenReaderContent>
        </span>
      </Link>
    </PopoverTrigger>
    <PopoverContent>
      <View
        as="div"
        display="auto"
        maxWidth="30rem"
        padding="small"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="small"
        >
          <Flex
            alignItems="stretch"
            as="span"
            direction="row"
            inline={false}
            justifyItems="space-between"
            visualDebug={false}
            wrapItems={false}
          >
            <FlexItem
              as="span"
              grow={true}
              shrink={true}
            >
              <div>
                Last Assessment: 
                No submissions
              </div>
            </FlexItem>
            <FlexItem
              align="stretch"
              as="span"
              grow={true}
              shrink={true}
            >
              <Text
                as="span"
                letterSpacing="normal"
                size="small"
                weight="bold"
              >
                <div>
                  <div
                    style={
                      Object {
                        "color": "#green",
                        "textAlign": "end",
                      }
                    }
                  >
                    I am Groot
                  </div>
                </div>
              </Text>
            </FlexItem>
          </Flex>
          <hr
            role="presentation"
          />
          <div>
            <Text
              as="span"
              letterSpacing="normal"
              size="small"
              weight="bold"
            >
              Calculation Method
            </Text>
            <div>
              Highest Score
            </div>
            <div
              style={
                Object {
                  "padding": "0.5rem 0 0 0",
                }
              }
            >
              <Text
                as="span"
                letterSpacing="normal"
                size="small"
                weight="bold"
              >
                Example
              </Text>
            </div>
            <div>
              Mastery score reflects the highest score of a graded assignment or quiz.
            </div>
            <div>
              1- Item Scores: 1, 4, 2, 3
            </div>
            <div>
              2- Final Score: 4
            </div>
          </div>
        </Text>
      </View>
    </PopoverContent>
  </Popover>
  <FlexItem
    as="span"
    grow={false}
    shrink={false}
  />
</span>
`;

exports[`renders the OutcomePopover component 1`] = `
<span>
  <Popover
    alignArrow={false}
    constrain="window"
    contentRef={[Function]}
    defaultFocusElement={null}
    defaultShow={false}
    insertAt="bottom"
    label={null}
    liveRegion={null}
    mountNode={null}
    offsetX={0}
    offsetY={0}
    on={
      Array [
        "hover",
        "focus",
      ]
    }
    onBlur={[Function]}
    onClick={[Function]}
    onDismiss={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onPositionChanged={[Function]}
    onPositioned={[Function]}
    onShow={[Function]}
    onToggle={[Function]}
    placement="bottom"
    positionTarget={null}
    shouldCloseOnDocumentClick={true}
    shouldCloseOnEscape={true}
    shouldContainFocus={false}
    shouldRenderOffscreen={false}
    shouldReturnFocus={true}
    stacking="topmost"
    trackPosition={true}
    variant="default"
    withArrow={true}
  >
    <PopoverTrigger>
      <Link
        as="button"
        ellipsis={false}
        iconPlacement="start"
        linkRef={[Function]}
        onClick={[Function]}
        variant="default"
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <IconInfo />
        </span>
        <span>
          <ScreenReaderContent
            as="span"
          >
            Click to expand outcome details
          </ScreenReaderContent>
        </span>
      </Link>
    </PopoverTrigger>
    <PopoverContent>
      <View
        as="div"
        display="auto"
        maxWidth="30rem"
        padding="small"
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="small"
        >
          <Flex
            alignItems="stretch"
            as="span"
            direction="row"
            inline={false}
            justifyItems="space-between"
            visualDebug={false}
            wrapItems={false}
          >
            <FlexItem
              as="span"
              grow={true}
              shrink={true}
            >
              <div>
                Last Assessment: 
                <DatetimeDisplay
                  datetime={2018-02-01T07:01:00.000Z}
                  format="%b %d, %l:%M %p"
                />
              </div>
            </FlexItem>
            <FlexItem
              align="stretch"
              as="span"
              grow={true}
              shrink={true}
            >
              <Text
                as="span"
                letterSpacing="normal"
                size="small"
                weight="bold"
              >
                <div>
                  <div
                    style={
                      Object {
                        "color": "#green",
                        "textAlign": "end",
                      }
                    }
                  >
                    I am Groot
                  </div>
                </div>
              </Text>
            </FlexItem>
          </Flex>
          <hr
            role="presentation"
          />
          <div>
            <Text
              as="span"
              letterSpacing="normal"
              size="small"
              weight="bold"
            >
              Calculation Method
            </Text>
            <div>
              Highest Score
            </div>
            <div
              style={
                Object {
                  "padding": "0.5rem 0 0 0",
                }
              }
            >
              <Text
                as="span"
                letterSpacing="normal"
                size="small"
                weight="bold"
              >
                Example
              </Text>
            </div>
            <div>
              Mastery score reflects the highest score of a graded assignment or quiz.
            </div>
            <div>
              1- Item Scores: 1, 4, 2, 3
            </div>
            <div>
              2- Final Score: 4
            </div>
          </div>
        </Text>
      </View>
    </PopoverContent>
  </Popover>
  <FlexItem
    as="span"
    grow={false}
    shrink={false}
  />
</span>
`;
